@@ -1,6 +1,7 @@
 -- ircd-hybrid-8beta2 Release Notes
 o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
    when set to yes
+o) Unregistered clients may not talk in a +R channel
 
 
 -- ircd-hybrid-8beta1 Release Notes
